# memory-layer

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: deploy.yml
app/: action_schema.py  auth.py  check_live.py  config.py  connect.py  db.py  docs.py  jobs.py  main.py  mcp_http.py  mcp_server.py  models.py  oauth.py  passwords.py  schema_apply.py  supabase_auth.py  taxonomy.py  worker.py
app/services/: assertions.py  control.py  decay.py  embeddings.py  entities.py  export.py  extraction.py  findability.py  gates.py  ingest.py  linkedin_search.py  matching.py  meetings.py  mock_llm.py  pages.py  pages_agent.py  persona.py  persona_brief.py  persona_ingest.py  resolution.py  sessions.py  social.py  token_store.py  zynd_identity.py
app/tools/: brief.py  linkedin.py  notion.py  scheduling.py  twitter.py  zynd_network.py  zynd_services.py
app/tools/google/: calendar.py  common.py  docs.py  drive.py  gmail.py  sheets.py
openapi/: action.prod.json
scripts/: apply_schema.sh
sql/: schema.sql
tests/: conftest.py  test_auth.py  test_connect.py  test_control.py  test_decay.py  test_entities.py  test_export.py  test_findability.py  test_gates.py  test_ingest_and_recall.py  test_linkedin_search.py  test_logic.py  test_matching.py  test_mcp_http.py  test_oauth.py  test_oauth_clients.py  test_pages.py  test_passwords.py  test_persona.py  test_persona_ingest.py  test_pipeline.py  test_resolution.py  test_security_fixes.py  test_sessions.py  test_social.py  test_supabase_auth.py  test_taxonomy_v2.py
