[project]
name = "zynd"
version = "0.1.0"
description = "ZYND — user context graph from AI conversations"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "arq>=0.26",
    "openai>=1.50",
    "python-dotenv>=1.0",
    "pyjwt>=2.9",
    "python-multipart>=0.0.12",
    "mcp>=1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "integration: requires Postgres + Redis (docker compose up)",
]
